--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "del": "^5.1.0",
     "gulp": "4.0.2",
     "gulp-csso": "^4.0.1",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-less": "4.0.1",
     "gulp-plumber": "1.2.1",
@@ -16,7 +17,9 @@
     "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "2.6.5",
     "gulp-svgstore": "^7.0.1",
+    "gulp-uglify": "^3.0.2",
     "gulp-webp": "^4.0.1",
+    "readable-stream": "^3.6.0",
     "stylelint": "13.6.1",
     "stylelint-config-htmlacademy": "0.1.4"
   },
